@@ -1,3 +1,8 @@
+2002-12-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/i386/tls.h: Include stdlib.h.
+	* sysdeps/x86_64/tls.h: Likewise.
+
 2002-12-04  Ulrich Drepper  <drepper@redhat.com>
 
 	* Makefile (tests): Add tst-locale2.
